[package]
name = "proxy"
version = "0.0.0-2023.3.15.3"
edition = "2021"

[dependencies]
axum = { version = "0.6.1", features = ["ws"] }
clap = { version = "4.1.8", features = ["env", "derive"] }
dashmap = "5.4.0"
error-stack = "0.2.4"
futures = "0.3.25"
messages = { path = "../messages", features = ["encoding"] }
nanoid = "0.4.0"
ntest = "0.9.0"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = "0.1.12"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-unwrap = "0.10.0"

[dev-dependencies]
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
